# Vopro

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
agent/: README.md  package-lock.json  package.json  tsconfig.json
agent/src/: buffer.ts  capture.ts  config.ts  main.ts  masking.ts  preload.ts  receiver.ts  sync.ts  types.ts
agent/test/: masking.test.ts  receiver.test.ts  sync.test.ts
agent/ui/: index.html
ai-engine/: Dockerfile  README.md  pyproject.toml  requirements.txt
ai-engine/tests/: test_api_errors.py  test_baseline_accuracy.py  test_decisions.py  test_llm.py  test_pattern.py  test_sop.py  test_transcript.py
ai-engine/tests/fixtures/: __init__.py  datasets.py
ai-engine/vopro_ai/: __init__.py  api.py  decisions.py  llm.py  models.py  pattern.py  sop.py  transcript.py  worker.py
backend/: .dockerignore  .rubocop.yml  Dockerfile  Dockerfile.prod  Gemfile  README.md
backend/config/: application.rb  boot.rb  database.yml  puma.rb  routes.rb  sidekiq.yml
backend/db/: schema.rb  seeds.rb
backend/lib/: email_domains.rb
backend/spec/: factories.rb  rails_helper.rb  (+1 more)
docs/: API.md  ARCHITECTURE.md  B2B_ONBOARDING.md  BILLING.md  PRIVACY.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
integrations/: README.md  package-lock.json  package.json  tsconfig.json
(+177 files in other folders)
