[project]
name = "vopro-ai"
version = "0.1.0"
description = "Vopro AI engine — pattern detection, decision inference, SOP generation."
requires-python = ">=3.11"
license = { text = "Proprietary — see LICENSE" }
authors = [{ name = "Efe Obukohwo" }]
classifiers = [
  "License :: Other/Proprietary License",
  "Private :: Do Not Upload",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
